--- a/index.html
+++ b/index.html
@@ -121,6 +121,20 @@
             	<h2 class="text-center" style="margin-block: 1rem;">最近更新文章</h2>
                 <!-- welcome -->
                 <div class="xcblog-blog-list">
+                                        <div class="welcome xcblog-blog-item" data-date="2024-11-20">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2024-11-20-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/b689047df3c43c67dc5627978a2159c3.webp" alt="11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2024-11-20-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">11月20日→19M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了香港、欧洲、韩国、新加坡、美国、日本、加拿大等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                         <div class="welcome xcblog-blog-item" data-date="2024-11-19">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2024-11-19-node-share.htm" class="xcblog-blog-url">
@@ -387,20 +401,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                        <div class="welcome xcblog-blog-item" data-date="2024-10-31">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-10-31-clash-windows.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/dcf34dc84fbab448f7946e41c45555d6.webp" alt="10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-10-31-clash-windows.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">10月31日→18.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、韩国、新加坡、香港、欧洲、加拿大、美国等地区,最高速度可达18.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                                     </div>
                 <!-- //welcome -->
             </div>
@@ -411,16 +411,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-10-18-clash-windows.htm" title="10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-11-shadowrocket-node.htm" title="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm" title="5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-10-free-high-speed-nodes.htm" title="11月10日→18.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐">11月10日→18.2M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-22-free-high-speed-nodes.htm" title="8月22日→21.5M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">8月22日→21.5M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-12-clash-node.htm" title="3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接">3月12日19.8M/S|Shadowrocket/SSR/Clash/V2ray免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-13-free-ssr-node.htm" title="11月13日→20.1M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">11月13日→20.1M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-28-clash-windows.htm" title="3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接">3月28日→22.4M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-4-free-clash.htm" title="10月4日→18.1M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">10月4日→18.1M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-11-free-clash-subscribe.htm" title="11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐">11月11日→18.6M/S|2024年最新免费节点V2ray/Clash/Shadowrocket/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-22-node-share-links.htm" title="4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接">4月22日→20.1M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-17-node-share-links.htm" title="8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">8月17日→18.2M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-14-clash-node-daily-updates.htm" title="8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">8月14日→19.4M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-25-free-node-subscribe.htm" title="10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐">10月25日→20.2M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-8-26-free-v2ray.htm" title="8月26日→22.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">8月26日→22.9M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-6-2-free-clash.htm" title="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-22-free-high-speed-nodes.htm" title="8月22日→21.5M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">8月22日→21.5M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" title="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-9-node-share-links.htm" title="6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">6月9日→18.9M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -432,7 +432,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">19</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
+                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">31</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
